@startuml
'https://plantuml.com/class-diagram

class Pizza {
    void prepare();
    void bake();
    void cut();
    void box();
}


class BJchessePizza{}
class BJGreekPizza{}
class LDGreekPizza{}
class LDPepperPizza{}

together{
    class LDPepperPizza
    class LDGreekPizza
}

Pizza <|-- BJchessePizza
Pizza <|-- BJGreekPizza
Pizza <|-- LDGreekPizza
Pizza <|-- LDPepperPizza


interface AbsFactory{
    Pizza createPizza()
}

class BJFactory{}
class LDFactory{}
class OrderPizza{}
class OrderPizza2{}

BJFactory --|> AbsFactory
LDFactory --|> AbsFactory
AbsFactory --o OrderPizza
AbsFactory --o OrderPizza2

BJFactory ..> BJchessePizza
BJFactory ..> BJGreekPizza

LDFactory ..> LDGreekPizza
LDFactory ..> LDPepperPizza


@enduml